# roboy-activity-recognition

./: .gitignore  Dockerfile  Makefile  README.md  compose.sh  docker-compose.yml
app_code/: local_ros.sh  speech_test.sh  start_har.sh
app_code/inference/: HARController.py  camera.py  imshow.py  opencv_camera.py  predictor.py  predictorctrl.py  predictorproxy.py  talk_client.py  zed_camera.py
app_code/inference/frontend/: package-lock.json  package.json
app_code/inference/frontend/src/: App.js  har-view.js
app_code/inference/frontend_files/: asset-manifest.json  index.html  precache-manifest.c22ae07e15a6c5233c3c01e3eb46f8a8.js  service-worker.js
app_code/inference/frontend_files/static/js/: 2.70cb433c.chunk.js  2.70cb433c.chunk.js.map  main.a963e460.chunk.js  main.a963e460.chunk.js.map  runtime-main.461e554a.js  runtime-main.461e554a.js.map
app_code/inference/templates/: index.html
optical_flow_cuda_pybind/: CMakeLists.txt  README.md  test-opticalflow.py  test.py
optical_flow_cuda_pybind/src/: call_tv.cpp  opticalflow.cpp  tvl1_optical_flow.cpp
ros_code/: CMakeLists.txt  package.xml
ros_code/launch/: activity_recognition.launch
ros_code/msg/: ActivityLabel.msg
ros_code/scripts/: HAR_client.py  HAR_server.py  mock_har_server.py  test_emotion_sub.py
